[gd_scene load_steps=9 format=3 uid="uid://c0ngspiiu5oi4"]

[ext_resource type="Script" uid="uid://c3b6u7tug1dfu" path="res://scripts/game.gd" id="1_sryux"]
[ext_resource type="PackedScene" uid="uid://0qd45loq3uly" path="res://scenes/ui.tscn" id="2_cm0tb"]
[ext_resource type="Script" uid="uid://cwfee4vo6nf0p" path="res://scripts/ui.gd" id="3_fmuns"]
[ext_resource type="PackedScene" uid="uid://c3vxru085k6u5" path="res://scenes/Card.tscn" id="4_cdtl7"]
[ext_resource type="PackedScene" uid="uid://c8rabjewwm8nm" path="res://scenes/manager.tscn" id="5_0lhxj"]
[ext_resource type="PackedScene" uid="uid://d3ema2b36ytps" path="res://scenes/hand.tscn" id="6_wr0oi"]
[ext_resource type="Script" uid="uid://c2rlvg2v86y14" path="res://scripts/discard_pile.gd" id="7_6hx8a"]
[ext_resource type="Texture2D" uid="uid://cnm50q5f8of8t" path="res://assets/cards/back_cover.png" id="8_fnqh2"]

[node name="Game" type="Node2D"]
script = ExtResource("1_sryux")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -117.0
offset_top = -59.0
offset_right = 2131.0
offset_bottom = 1238.0
mouse_filter = 2
color = Color(0.392157, 0.615686, 0.270588, 1)

[node name="UI" parent="." instance=ExtResource("2_cm0tb")]
script = ExtResource("3_fmuns")

[node name="Card" parent="." instance=ExtResource("4_cdtl7")]
position = Vector2(589, 212)

[node name="GameManager" parent="." instance=ExtResource("5_0lhxj")]

[node name="PlayerHand" parent="." instance=ExtResource("6_wr0oi")]
position = Vector2(800, 850)

[node name="OpHand2" parent="." instance=ExtResource("6_wr0oi")]
position = Vector2(800, 0)
rotation = 3.14159

[node name="OpHand1" parent="." instance=ExtResource("6_wr0oi")]
position = Vector2(0, 450)
rotation = 1.5708

[node name="OpHand3" parent="." instance=ExtResource("6_wr0oi")]
position = Vector2(1600, 450)
rotation = 4.71239

[node name="DiscardPile" type="Node2D" parent="."]
position = Vector2(800, 450)
script = ExtResource("7_6hx8a")

[node name="Deck" type="Button" parent="."]
offset_left = 257.0
offset_top = 140.0
offset_right = 431.0
offset_bottom = 405.0
icon = ExtResource("8_fnqh2")
flat = true

[connection signal="play_approved" from="GameManager" to="PlayerHand" method="on_play_approval"]
[connection signal="player_turn" from="GameManager" to="UI" method="on_player_turn"]
[connection signal="player_turn" from="GameManager" to="PlayerHand" method="_on_game_manager_player_turn"]
[connection signal="turn_end" from="GameManager" to="UI" method="on_turn_end"]
[connection signal="card_discarded" from="PlayerHand" to="DiscardPile" method="_on_player_hand_card_discarded"]
[connection signal="pressed" from="Deck" to="." method="_on_deck_pressed"]
